Fixed spacing of title

--- a/src/Timeline.css
+++ b/src/Timeline.css
@@ -1,19 +1,24 @@
 .page-container {
-  color: var(--light-text);
-  padding: 36px;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+    color: var(--light-text);
+    padding: 36px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .title {
-    text-align: center;
+    text-align: left;
+    margin-left: 5vw;
 }
 
 .timeline-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-  min-height: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    min-height: 0;
+}
+
+.legend-container {
+    padding: 0 24px;
 }
